--- a/languages/it/strings.xml
+++ b/languages/it/strings.xml
@@ -18,7 +18,7 @@
         символы, которые начинаются на % используются для поставления чисел или текстов при запущенной программы
     -->
       
-  <string name="app_name">Droid Dashcam - Guidare il DVR</string>
+  <string name="app_name">Droid Dashcam - Dashcam per Android</string>
       
   <string name="any_text">Qualsiasi</string>
       
@@ -81,7 +81,7 @@
 
   <string name="donate_success_thanks_msg_text">Grazie mille per il tuo supporto!</string>
       
-  <string name="donation_dlg_has_ads_text">Per rimuovere gli annunci, la donazione deve essere di o più.</string>
+  <string name="donation_dlg_has_ads_text">Per rimuovere gli annunci, la donazione deve essere pari o superiore a</string>
       
   <string name="donation_dlg_no_ads_text">Non hai annunci.</string>
       
@@ -341,7 +341,7 @@
       
   <string name="prefs_g_sensor_force_very_low">Molto basso</string>
       
-  <string name="prefs_gps_accuracy_text">Ignora i dati GPS con errore sopra</string>
+  <string name="prefs_gps_accuracy_text">Ignora i dati GPS con errore oltre</string>
       
   <string name="prefs_gps_disabled_gps_and_google_text">Mostra avviso quando il GPS e la geolocalizzazione di Google sono disabilitati</string>
       
@@ -355,7 +355,7 @@
       
   <string name="prefs_kill_services_sum_text">Ci sono impostazioni sul tuo dispositivo per consentire la riproduzione automatica e l\'esecuzione delle app in background. Fare clic qui e aggiungere l\'applicazione alle eccezioni (consentire l\'avvio automatico e così via) per consentirne l\'esecuzione in background e quando lo schermo è spento, se vietato</string>
       
-  <string name="prefs_kill_services_text">Consentire il lavoro in background</string>
+  <string name="prefs_kill_services_text">Consentire il funzionamento in background</string>
       
   <string name="prefs_launch_app_none_text">Non scelto</string>
       
@@ -409,7 +409,7 @@
       
   <string name="prefs_other_show_ui_elements_text">Elementi da visualizzare sullo schermo</string>
       
-  <string name="prefs_other_video_duration_text">Durata del video: quanto spesso salvare</string>
+  <string name="prefs_other_video_duration_text">Durata del video: ogni quanto salvare</string>
       
   <string name="prefs_overlay_app_btn_text">Avvia l\'applicazione</string>
       
@@ -427,17 +427,17 @@
       
   <string name="prefs_pinch_to_zoom_text">Abilita lo zoom dello schermo</string>
       
-  <string name="prefs_policy_text">politica sulla riservatezza</string>
+  <string name="prefs_policy_text">Politica sulla riservatezza</string>
       
   <string name="prefs_rate_sum_text">Valuta l\'app nel Play Store</string>
       
-  <string name="prefs_rate_text">Stima</string>
+  <string name="prefs_rate_text">Valutazione</string>
       
   <string name="prefs_recommendations_category_text">Raccomandazioni</string>
       
   <string name="prefs_rules_auto_category_camera_motion_text">Rilevamento del movimento tramite telecamera</string>
       
-  <string name="prefs_rules_auto_lock_file_sum_text">Blocca il video dall\'eliminazione automatica (sovrascrivi) quando viene rilevato un colpo</string>
+  <string name="prefs_rules_auto_lock_file_sum_text">Blocca il video dall\'eliminazione automatica (sovrascrittura) quando viene rilevato un colpo</string>
       
   <string name="prefs_rules_auto_lock_file_text">G-sensor (sensore di shock)</string>
       
@@ -523,9 +523,9 @@
       
   <string name="prefs_subtitles_date_format_text">Formato data</string>
       
-  <string name="prefs_subtitles_date_text">Appuntamento)</string>
+  <string name="prefs_subtitles_date_text">Data</string>
       
-  <string name="prefs_subtitles_date_time_system_text">Sistemico</string>
+  <string name="prefs_subtitles_date_time_system_text">Da sistema operativo</string>
       
   <string name="prefs_subtitles_in_english_text">Sottotitoli in inglese</string>
       
@@ -549,7 +549,7 @@
       
   <string name="prefs_support_sum_text">Segnala un bug, blocca o fai un\'offerta</string>
       
-  <string name="prefs_support_text">Supporto (risposta)</string>
+  <string name="prefs_support_text">Supporto</string>
       
   <string name="prefs_system_alert_window_sum_text">Consenti a questa app di apparire sopra tutte le altre app. Ciò è necessario per avviare/interrompere automaticamente la registrazione video o per visualizzare una finestra mobile</string>
       
@@ -637,7 +637,7 @@
       
   <string name="rec_day_night_btn_auto_text">Automatico</string>
       
-  <string name="rec_fix_short_text">Corretta.</string>
+  <string name="rec_fix_short_text">Corretta</string>
       
   <string name="rec_fix_text">Per correggere</string>
       
@@ -713,7 +713,7 @@
       
   <string name="videos_empty_text">Video mancanti</string>
       
-  <string name="videos_file_action_lock_dlg_title">Bloccare questo video dalla cancellazione automatica (sovrascrivi)?</string>
+  <string name="videos_file_action_lock_dlg_title">Bloccare questo video dalla cancellazione automatica (sovrascrittura)?</string>
       
   <string name="videos_file_deletion_mode">Elimina modalità</string>
       
@@ -733,7 +733,7 @@
       
   <string name="videos_menu_delete">Eliminare</string>
       
-  <string name="videos_menu_refresh">ricaricare</string>
+  <string name="videos_menu_refresh">Ricaricare</string>
       
   <string name="videos_menu_select_all">Scegli tutto</string>
       
