--- a/languages/it/strings.xml
+++ b/languages/it/strings.xml
@@ -81,7 +81,7 @@
 
   <string name="donate_success_thanks_msg_text">Grazie mille per il tuo supporto!</string>
       
-  <string name="donation_dlg_has_ads_text">Per rimuovere gli annunci, la donazione deve essere pari o superiore a</string>
+  <string name="donation_dlg_has_ads_text">Per rimuovere gli annunci la donazione deve essere pari o superiore a</string>
       
   <string name="donation_dlg_no_ads_text">Non hai annunci.</string>
       
@@ -115,11 +115,11 @@
       
   <string name="format_speed_measure_miles">mph</string>
       
-  <string name="msg_activity_battery_is_not_ignoring_msg_text">Droid Dashcam non è escluso dall\'ottimizzazione della batteria . Se la fotocamera non funziona in background o qualcos\'altro, aggiungi questa applicazione alle eccezioni della modalità di risparmio energetico.</string>
+  <string name="msg_activity_battery_is_not_ignoring_msg_text">Droid Dashcam non è escluso dall\'ottimizzazione della batteria. Se la fotocamera non funziona in background o qualcos\'altro, aggiungi questa applicazione alle eccezioni della modalità di risparmio energetico.</string>
       
   <string name="msg_android_r_deleting_manual_tip_text">Se hai reinstallato l\'applicazione su Android 11, i vecchi file devono essere eliminati manualmente</string>
       
-  <string name="msg_app_has_lost_camera_control_text">Il controllo della fotocamera è perso per DroidDashcam . Si prega di aprire di nuovo DroidDashcam per riprendere il controllo della fotocamera.</string>
+  <string name="msg_app_has_lost_camera_control_text">Il controllo della fotocamera è perso per DroidDashcam. Si prega di aprire di nuovo DroidDashcam per riprendere il controllo della fotocamera.</string>
       
   <string name="msg_battery_optimization_tip_text">Ottimizzazione batteria -> Tutte le app  -> Droid Dashcam -> Non ottimizzare/risparmiare</string>
       
@@ -163,11 +163,11 @@
       
   <string name="msg_photo_was_saved">Foto salvata</string>
       
-  <string name="msg_please_close_other_app_and_restart_text">Chiudi altre applicazioni utilizzando la fotocamera e riavvia questa applicazione</string>
+  <string name="msg_please_close_other_app_and_restart_text">Chiudi le altre applicazioni che usano la fotocamera e riavvia questa app</string>
       
   <string name="msg_record_path_has_changed_text">La cartella di registrazione è stata modificata perché non disponibile o perché non è stata concessa l\'autorizzazione all\'archiviazione (scrittura)</string>
       
-  <string name="msg_recorder_init_error_file_not_found">Elimina i vecchi video, formatta la scheda SD o provane un altro . Inoltre, limita lo spazio massimo di registrazione video (meno è meglio) . Un gran numero di video salvati può causare tali problemi . Vedi anche le FAQ sulle schede SD in Impostazioni/FAQ . Puoi anche provare a scrivere sulla memoria del telefono invece che su una scheda esterna</string>
+  <string name="msg_recorder_init_error_file_not_found">Elimina i vecchi video, formatta la scheda SD o provane un altro. Inoltre, limita lo spazio massimo di registrazione video (meno è meglio) . Un gran numero di video salvati può causare tali problemi . Vedi anche le FAQ sulle schede SD in Impostazioni/FAQ . Puoi anche provare a scrivere sulla memoria del telefono invece che su una scheda esterna</string>
       
   <string name="msg_recording_stopping_not_enough_memory_text">Interrompi la registrazione. Memoria insufficiente per continuare</string>
       
@@ -177,9 +177,9 @@
       
   <string name="msg_stop_rec_too_fast_text">Si prega di attendere un secondo prima di interrompere la registrazione subito dopo l\'avvio</string>
       
-  <string name="msg_stop_recording_to_change_camera_text">Per cambiare la telecamera, è necessario interrompere la registrazione in corso</string>
+  <string name="msg_stop_recording_to_change_camera_text">Per cambiare la telecamera è necessario interrompere la registrazione in corso</string>
       
-  <string name="msg_to_close_this_service_close_app">Per chiudere questo servizio, prima minimizza o chiudi l\'app Droid Dashcam</string>
+  <string name="msg_to_close_this_service_close_app">Per chiudere questo servizio prima minimizza o chiudi l\'app Droid Dashcam</string>
       
   <string name="msg_video_become_locked_text">Il video verrà bloccato dalla sovrascrittura.</string>
       
@@ -187,14 +187,14 @@
       
   <string name="msg_video_has_locked_text">Il video è bloccato e salvato, anche il video successivo verrà contrassegnato come bloccato (può essere annullato facendo clic sul pulsante)</string>
       
-  <string name="msg_video_rec_battery_not_enough_text">La batteria sul dispositivo non è sufficientemente carica . Metti in carica o avvia la registrazione se la carica è superiore a 1%%</string>
+  <string name="msg_video_rec_battery_not_enough_text">La batteria sul dispositivo non è sufficientemente carica. Metti in carica o avvia la registrazione se la carica è superiore a 1%%</string>
       
   <string name="msg_video_recorder_error">Qualcosa è andato storto con il videoregistratore.</string>
       
   <string name="msg_voice_tts_lang_data_missing_text">Il language pack per TTS (Android Text-to-Speech) non è installato. Accendi Internet per iniziare a scaricare</string>
   <string name="msg_auto_recording_service_was_stopped">Hai interrotto il servizio di avvio automatico del video in background. Apri l\'app DroidDashcam per riavviarla</string>
       
-  <string name="notification_service_aux_checker">presa audio(Aux)</string>
+  <string name="notification_service_aux_checker">Presa audio (AUX)</string>
       
   <string name="notification_service_bl_checker">Bluetooth</string>
       
@@ -221,15 +221,15 @@
       
   <string name="permission_camera_request_canceled">Questa applicazione richiede l\'autorizzazione per utilizzare la fotocamera per registrare video. Ma l\'hai rifiutato. Chiusura… Prova a concedere l\'autorizzazione alla fotocamera nelle impostazioni di sistema di questa applicazione</string>
       
-  <string name="permission_location_dlg_explanation_msg">Quando ridotto a icona, Droid Dashcam utilizza la posizione sullo sfondo per disegnare coordinate, indirizzo e velocità sul video registrato.</string>
+  <string name="permission_location_dlg_explanation_msg">Quando ridotto a icona, Droid Dashcam utilizza la posizione in background per calcolare coordinate, indirizzo e velocità sul video registrato.</string>
       
-  <string name="permission_location_dlg_explanation_settings_msg">Su Android 11 (R), è necessario selezionare manualmente \"Sempre (qualsiasi modalità)\" nelle preferenze di sistema per consentire la posizione in background. Le impostazioni si apriranno dopo questa finestra.</string>
+  <string name="permission_location_dlg_explanation_settings_msg">Su Android 11 (R) è necessario selezionare manualmente \"Sempre (qualsiasi modalità)\" nelle preferenze di sistema per consentire la posizione in background. Le impostazioni si apriranno dopo questa finestra.</string>
       
-  <string name="permission_location_dlg_msg">La posizione è necessaria per determinare la velocità di trasporto utilizzando i dati GPS, l\'indirizzo corrente e le coordinate per la visualizzazione sullo schermo e per la registrazione dei sottotitoli sul video</string>
+  <string name="permission_location_dlg_msg">La posizione è necessaria per determinare la velocità di movimento, l\'indirizzo corrente e le coordinate per la visualizzazione sullo schermo e per la registrazione dei sottotitoli sul video</string>
       
   <string name="permission_location_dlg_title">Permesso di posizione</string>
       
-  <string name="permission_storage_dlg_msg">L\' archiviazione è necessaria per salvare il video in una cartella condivisa e per la modalità di registrazione in loop</string>
+  <string name="permission_storage_dlg_msg">L\'archiviazione è necessaria per salvare il video in una cartella condivisa e per la modalità di registrazione in loop</string>
       
   <string name="permission_storage_dlg_title">Permesso di archiviazione</string>
       
@@ -271,7 +271,7 @@
       
   <string name="prefs_auto_start_bl_category_text">Bluetooth</string>
       
-  <string name="prefs_auto_start_bl_device_text">Seleziona un dispositivo Bluetooth o qualsiasi</string>
+  <string name="prefs_auto_start_bl_device_text">Seleziona un dispositivo Bluetooth</string>
       
   <string name="prefs_auto_start_bl_sum_text">Avvia automaticamente la registrazione quando il dispositivo Bluetooth è connesso. Affinché il servizio di tracciamento bluetooth si avvii dopo il riavvio del dispositivo, è necessario che il dispositivo (schermo) sia sbloccato se è presente una password</string>
       
@@ -313,15 +313,15 @@
       
   <string name="prefs_donate_action_text">Donare</string>
       
-  <string name="prefs_donate_disable_ads_text">Donazione, rimuovi annunci</string>
+  <string name="prefs_donate_disable_ads_text">Donazione (rimozione pubblicità)</string>
       
-  <string name="prefs_donate_sum_text">Supporta lo sviluppo di applicazioni</string>
+  <string name="prefs_donate_sum_text">Supporta lo sviluppo dell'app</string>
       
   <string name="prefs_donate_text">Donazione</string>
       
   <string name="prefs_faq_sum_text">Domande frequenti</string>
       
-  <string name="prefs_float_size_increase_text">Dimensione dei pulsanti su una finestra mobile</string>
+  <string name="prefs_float_size_increase_text">Dimensione dei pulsanti sulla finestra mobile</string>
 
   <string name="from">da</string>
   <string name="to">a</string>
@@ -365,7 +365,7 @@
       
   <string name="prefs_location_manager_gps_only_text">Aggiorna la posizione utilizzando solo il GPS (non utilizzare la rete)</string>
       
-  <string name="prefs_location_method_provider_sum_text">Se i valori di velocità non sono validi, prova il vecchio metodo Se i valori sono zero o vengono aggiornati raramente, prova il nuovo metodo</string>
+  <string name="prefs_location_method_provider_sum_text">Se i valori di velocità non sono validi prova il vecchio metodo. Se i valori sono zero o vengono aggiornati raramente prova il nuovo metodo</string>
       
   <string name="prefs_location_provider_method_text">Metodo di acquisizione della posizione (GPS)</string>
       
@@ -375,11 +375,11 @@
       
   <string name="prefs_optical_zoom_text">Zoom ottico (Zoom) / Lunghezza focale</string>
       
-  <string name="prefs_orientation_landscape">Paesaggio</string>
+  <string name="prefs_orientation_landscape">Paesaggio (orizzontale)</string>
       
-  <string name="prefs_orientation_landscape_reversed">Retro dell\'album</string>
+  <string name="prefs_orientation_landscape_reversed">Paesaggio invertito (orizzontale invertito)</string>
       
-  <string name="prefs_orientation_portrait">Ritratto</string>
+  <string name="prefs_orientation_portrait">Ritratto (verticale)</string>
       
   <string name="prefs_other_auto_deleting_sum_text">Elimina automaticamente i video più vecchi durante la registrazione se non c\'è abbastanza spazio per i nuovi video</string>
       
@@ -391,11 +391,11 @@
       
   <string name="prefs_other_miles_text">Display in miglia, piedi</string>
       
-  <string name="prefs_other_path_photo_text">Posizione foto (cartella/percorso)</string>
+  <string name="prefs_other_path_photo_text">Percorso salvataggio foto</string>
       
-  <string name="prefs_other_path_text">Posizione del video (cartella/percorso)</string>
+  <string name="prefs_other_path_text">Percorso salvataggio video</string>
       
-  <string name="prefs_other_settings_sum_text">Posizione del video (cartella di salvataggio), durata del video, registrazione in loop, sensore G, GPS</string>
+  <string name="prefs_other_settings_sum_text">Percorso salvataggio del video, durata del video, registrazione in loop, sensore G, GPS</string>
       
   <string name="prefs_other_settings_text">Altre impostazioni</string>
       
@@ -409,13 +409,13 @@
       
   <string name="prefs_other_show_ui_elements_text">Elementi da visualizzare sullo schermo</string>
       
-  <string name="prefs_other_video_duration_text">Durata del video: ogni quanto salvare</string>
+  <string name="prefs_other_video_duration_text">Durata di ogni video (ogni quanto salvare)</string>
       
   <string name="prefs_overlay_app_btn_text">Avvia l\'applicazione</string>
       
   <string name="prefs_overlay_buttons_text">Pulsanti/elementi su una finestra mobile</string>
       
-  <string name="prefs_overlay_close_btn_text">Chiudi una finestra</string>
+  <string name="prefs_overlay_close_btn_text">Chiudi finestra</string>
       
   <string name="prefs_overlay_drag_btn_text">Trascina finestra</string>
       
@@ -461,7 +461,7 @@
       
   <string name="prefs_screen_autostart_text">Avvio automatico della registrazione</string>
       
-  <string name="prefs_screen_ui_summary_text">Schermo rapido/premuto a lungo, schermo spento, visualizzazione dell\'indirizzo e della velocità, finestra popup, pulsanti e altro</string>
+  <string name="prefs_screen_ui_summary_text">Tocchi sullo schermo, schermo spento, visualizzazione dell\'indirizzo e della velocità, finestra popup, pulsanti e altro</string>
       
   <string name="prefs_screen_ui_title">Interfaccia (UI)</string>
       
@@ -499,7 +499,7 @@
       
   <string name="prefs_show_take_photo_btn_text">Per fare una foto</string>
       
-  <string name="prefs_show_ui_elements_sum_text">Indirizzo, velocità, coordinate</string>
+  <string name="prefs_show_ui_elements_sum_text">Indirizzo, velocità, coordinate, altezza sul livello del mare</string>
       
   <string name="prefs_stabilization_eis_text">Elettronica (digitale, EIS) - consigliata</string>
       
